# bitcore

./: Cargo.toml  README.md  deny.toml
.github/workflows/: coverage-badge.yml  nightly.yml  rust.yml
benches/: performance.rs
examples/: basic_usage.rs
scripts/: benchmark.sh  coverage.sh  generate_coverage_badge.sh  run_socat_tests.bat  run_socat_tests.sh
src/: api.rs  config.rs  error.rs  lib.rs  serial.rs  simple.rs
tests/: socat_tests.rs  tests.rs
