[package]
name = "bitcore"
version = "0.1.0"
edition = "2021"
description = "simple serial communication driver"
license = ""
keywords = ["serial", "communication", "embedded", "hardware"]
categories = ["embedded", "hardware-support"]
readme = "README.md"

[dependencies]
serialport = "4.5.0"
tracing = { version = "0.1", default-features = false }

[dev-dependencies]
tracing-subscriber = "0.3"
tempfile = "3.8"
criterion = "0.8.1"
